# rust_demo

./: Cargo.toml  README.md  build.rs  device.x  memory.x
.cargo/: config
src/: main.rs
