[package]
authors = ["Thomas Epperson"]
edition = "2018"
readme = "README.md"
name = "broken_loop"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.cortex-m]
version = "0.6.0"
features = []

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"
